[package]
name = "kvs"
description = "a simple key-value store"
version = "0.1.0"
authors = ["ClSlaid <cailue@bupt.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "1.0.2"
clap = "2.33.3"

[dev-dependencies]
predicates = "1.0.6"
serde_yaml = "0.8.14"
